--- a/app/login/login.module.css
+++ b/app/login/login.module.css
@@ -50,8 +50,6 @@
     z-index: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .googleBtn {
@@ -75,8 +73,6 @@
 .googleBtn svg {
     transition: fill 0.4s;
 }
-
-
 
 .googleBtn:hover {
     background-color: lightgray;
@@ -123,6 +119,14 @@
 
     .rightSide {
         display: none;
+    }
+
+    .leftSide {
+        background: linear-gradient(347deg, #ff9b21, #000000);
+        background-size: 400% 400%;
+        -webkit-animation: AnimationName 30s ease infinite;
+        -moz-animation: AnimationName 30s ease infinite;
+        animation: AnimationName 30s ease infinite;
     }
 }
 
