--- a/app/globals.css
+++ b/app/globals.css
@@ -52,3 +52,28 @@ button {
     padding: 0 0.5rem;
   }
 }
+
+ul {
+  gap: 10px;
+  text-align: center;
+  padding: 0;
+  margin-left: 10px;
+}
+
+
+li {
+  width: 100%;
+  background-color: #0F0F0F;
+  padding: 6px 10px;
+  border-radius: 15px;
+  cursor: pointer;
+  border: 1px solid #ff9b21;
+  list-style-type: none;
+  transition: 0.3s;
+}
+
+li:hover {
+  transform: scale(1.04);
+  background-color: #2b2b2b;
+  color: #ff9b21;
+}
